--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,8 @@ body {
     background: fixed url('../images/main.jpg') no-repeat;
     background-size: cover;
     color: aliceblue;
+    background-attachment: fixed;
+    background-attachment: scroll;
 }
 
 #multiscroll-nav li span {
