--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,6 @@ html {
     overflow-x: hidden;
 }
 
-body {
-    overflow: hidden;
-}
-
 /* Page Style */
 .ms-left {
     text-align: center;
@@ -38,6 +34,8 @@ body {
     background: fixed url('../images/main.jpg') no-repeat;
     background-size: cover;
     color: aliceblue;
+    background-attachment: fixed;
+    background-attachment: scroll;
 }
 
 #multiscroll-nav li span {
